<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_config"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_add_ms_tts"
                android:icon="@drawable/ic_baseline_dashboard_customize_24"
                android:title="@string/systts_add_internal_tts"
                tools:ignore="AlwaysShowAction" />

            <item
                android:id="@+id/menu_add_local_tts"
                android:icon="@drawable/ic_text_to_speech_24"
                android:title="@string/add_local_tts"
                app:iconTint="?attr/colorPrimary" />

            <item
                android:id="@+id/menu_add_http_tts"
                android:icon="@drawable/ic_baseline_http_24"
                android:title="@string/systts_add_custom_tts" />

            <item
                android:id="@+id/menu_add_plugin_tts"
                android:icon="@drawable/ic_baseline_javascript_24"
                android:title="@string/systts_add_plugin_tts" />

            <item
                android:id="@+id/menu_add_bgm_tts"
                android:icon="@drawable/baseline_queue_music_24"
                android:title="@string/add_bgm_tts" />

            <item
                android:id="@+id/menu_add_group"
                android:icon="@drawable/ic_baseline_groups_24"
                android:title="@string/add_group" />
        </menu>
    </item>

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_do_split"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_content_cut_24"
            android:title="@string/systts_split_long_sentences" />
        <item
            android:id="@+id/menu_switch_multi_voice"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_supervisor_account_24"
            android:title="@string/systts_multi_voice_option" />

    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_builtin_player_settings"
            android:checkable="true"
            android:icon="@drawable/ic_baseline_smart_display_24"
            android:title="@string/systts_use_internal_audio_player" />

        <item
            android:id="@+id/menu_audio_params"
            android:icon="@drawable/baseline_speed_24"
            android:title="@string/audio_params" />
        <item
            android:id="@+id/menu_bgm_settings"
            android:icon="@drawable/baseline_queue_music_24"
            android:title="@string/bgm_settings" />
    </group>

    <item
        android:id="@+id/menu_read_rule_manager"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/read_rule_manager" />

    <item
        android:id="@+id/menu_plugin_manager"
        android:icon="@drawable/ic_plugin"
        android:title="@string/plugin_manager" />

    <item
        android:id="@+id/menu_replace_manager"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_find_replace_24"
        android:title="@string/systts_replace_rule_manager" />

    <group android:id="@+id/group4">
        <item
            android:id="@+id/menu_import"
            android:icon="@drawable/ic_baseline_input_24"
            android:title="@string/import_config" />
        <item
            android:id="@+id/menu_export"
            android:icon="@drawable/ic_baseline_output_24"
            android:title="@string/export_config" />
    </group>
</menu>
