<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_open_web"
        android:icon="@drawable/ic_baseline_open_in_browser_24"
        android:title="@string/open_web" />
    <item
        android:id="@+id/menu_clearWebData"
        android:icon="@drawable/ic_clear"
        android:title="@string/clear_web_data" />
    <item
        android:id="@+id/menu_setToken"
        android:icon="@drawable/ic_baseline_token_24"
        android:title="@string/server_set_token" />
    <item
        android:id="@+id/menu_wake_lock"
        android:checkable="true"
        android:icon="@drawable/ic_baseline_lock_24"
        android:title="@string/wake_lock" />
    <item
        android:id="@+id/menu_shortcut"
        android:icon="@drawable/ic_baseline_add_business_24"
        android:title="@string/desktop_shortcut" />

</menu>