<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_rename_group"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/rename" />

        <item
            android:id="@+id/menu_copy_group"
            android:icon="@drawable/ic_baseline_content_copy_24"
            android:title="@string/copy" />
        <item
            android:id="@+id/menu_audio_params"
            android:icon="@drawable/baseline_speed_24"
            android:title="@string/audio_params"
            app:iconTint="?attr/colorOnBackground" />
        <item
            android:id="@+id/menu_export"
            android:icon="@drawable/ic_baseline_output_24"
            android:title="@string/export_config"
            app:iconTint="?attr/colorOnBackground" />
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_remove_group"
            android:icon="@drawable/ic_baseline_delete_forever_24"
            android:title="@string/delete"
            app:iconTint="?attr/colorError" />
    </group>
</menu>
