<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_edit"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/edit" />

        <item
            android:id="@+id/menu_listen"
            android:icon="@drawable/ic_baseline_headset_24"
            android:title="@string/audition" />

        <item
            android:id="@+id/menu_copy_config"
            android:icon="@drawable/ic_baseline_content_copy_24"
            android:title="@string/copy"
            tools:ignore="PrivateResource" />

        <item
            android:icon="@drawable/ic_baseline_add_24"
            android:title="复制为其他TTS">
            <menu>
                <item
                    android:id="@+id/menu_add_ms_tts"
                    android:icon="@drawable/ic_baseline_dashboard_customize_24"
                    android:title="@string/systts_add_internal_tts"
                    tools:ignore="AlwaysShowAction" />

                <item
                    android:id="@+id/menu_add_local_tts"
                    android:icon="@drawable/ic_text_to_speech_24"
                    android:title="@string/add_local_tts"
                    app:iconTint="?attr/colorPrimary" />

                <item
                    android:id="@+id/menu_add_http_tts"
                    android:icon="@drawable/ic_baseline_http_24"
                    android:title="@string/systts_add_custom_tts" />

                <item
                    android:id="@+id/menu_add_plugin_tts"
                    android:icon="@drawable/ic_baseline_javascript_24"
                    android:title="@string/systts_add_plugin_tts" />
            </menu>

        </item>
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_delete"
            android:icon="@drawable/ic_baseline_delete_forever_24"
            android:title="@string/delete"
            app:iconTint="?attr/colorError" />
    </group>
</menu>