<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_config"
        app:showAsAction="always" />

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_hanlp_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/hanlp_settings"
            app:iconTint="?attr/colorPrimary" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_import"
            android:icon="@drawable/ic_baseline_input_24"
            android:title="@string/import_config" />

        <item
            android:id="@+id/menu_export"
            android:icon="@drawable/ic_baseline_output_24"
            android:title="@string/export_config" />
    </group>
</menu>