<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_delete"
            android:icon="@drawable/ic_baseline_delete_forever_24"
            android:title="@string/delete"
            app:iconTint="?attr/colorError" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_move_to_top"
            android:icon="@drawable/ic_baseline_vertical_align_top_24"
            android:title="@string/move_to_top" />
        <item
            android:id="@+id/menu_move_to_bottom"
            android:icon="@drawable/ic_baseline_vertical_align_bottom_24"
            android:title="@string/move_to_bottom" />
    </group>

</menu>