<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_rename_group"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/rename"
            app:iconTint="@color/colorPrimary" />
        <item
            android:id="@+id/menu_delete_group"
            android:icon="@drawable/ic_baseline_delete_forever_24"
            android:title="@string/delete"
            app:iconTint="@android:color/holo_red_light" />
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_export_config"
            android:icon="@drawable/ic_baseline_output_24"
            android:title="@string/export_config" />
    </group>
</menu>
