<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/menu_edit"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/edit" />

        <item
            android:id="@+id/menu_copy_config"
            android:icon="@drawable/ic_baseline_content_copy_24"
            android:title="@string/copy"
            tools:ignore="PrivateResource" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/menu_delete"
            android:icon="@drawable/ic_baseline_delete_forever_24"
            android:title="@string/delete"
            app:iconTint="?attr/colorError" />
    </group>
</menu>