<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shuffle"
        android:textAppearance="?attr/textAppearanceTitleMedium" />

    <com.github.jing332.tts_server_android.ui.view.widget.Seekbar
        android:id="@+id/seek_volume"
        android:layout_width="match_parent"
        app:min="1"
        app:max="101"
        app:progress="101"
        android:layout_height="wrap_content"
        app:hint="@string/label_volume" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bgm_settings_tip"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textStyle="bold" />

</LinearLayout>