<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.jing332.tts_server_android.ui.custom.widget.Seekbar
        android:id="@+id/seekbar_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hint="@string/label_rate"
        app:max="100"
        app:progress="50" />

    <com.github.jing332.tts_server_android.ui.custom.widget.Seekbar
        android:id="@+id/seekbar_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:hint="@string/label_volume"
        app:max="100"
        app:progress="50" />

    <com.github.jing332.tts_server_android.ui.custom.widget.Seekbar
        android:id="@+id/seekbar_pitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:hint="@string/label_pitch"
        app:max="100"
        app:progress="50" />

</LinearLayout>